@@ -286,6 +286,7 @@ public class AdminController extends SpringActionController
     private static final DefaultActionResolver _actionResolver = new DefaultActionResolver(
         AdminController.class,
         FilesSiteSettingsAction.class,
+        UpdateFilePathsAction.class,
         FileListAction.class
     );
 
@@ -3376,7 +3377,7 @@ public class AdminController extends SpringActionController
                     if (labkeyThread)
                     {
                         String threadInfo = thread.getName();
-                        String uri = ViewServlet.getRequestURL(thread);
+                        ViewServlet.RequestSummary uri = ViewServlet.getRequestSummary(thread);
                         if (null != uri)
                             threadInfo += "; processing URL " + uri;
                         activeThreads.add(threadInfo);
@@ -8137,7 +8138,7 @@ public class AdminController extends SpringActionController
                     ActionURL url = new ActionURL(ModulesAction.class, ContainerManager.getRoot());
                     url.addParameter("ignore", "0.00," + lowestSchemaVersion);
                     url.addParameter("managedOnly", true);
-                    managedLink = PageFlowUtil.link("Click here to ignore 0.00, " + lowestSchemaVersion + " and unmanaged modules").href(url).getHtmlString();
+                    managedLink = PageFlowUtil.link("Click here to ignore null, " + lowestSchemaVersion + " and unmanaged modules").href(url).getHtmlString();
                 }
                 else
                 {
@@ -8354,9 +8355,9 @@ public class AdminController extends SpringActionController
         {
             List<Module> modulesTooLow = ModuleLoader.getInstance().getModules().stream()
                 .filter(ManageFilter.ManagedOnly::accept)
-                .filter(m->null != m.getSchemaVersion())
-                .filter(m->m.getSchemaVersion() > 0.00 && m.getSchemaVersion() < Constants.getLowestSchemaVersion())
-                .collect(Collectors.toList());
+                .filter(m -> null != m.getSchemaVersion())
+                .filter(m -> m.getSchemaVersion() > 0.00 && m.getSchemaVersion() < Constants.getLowestSchemaVersion())
+                .toList();
 
             if (!modulesTooLow.isEmpty())
                 fail("The following module" + (1 == modulesTooLow.size() ? " needs its schema version" : "s need their schema versions") + " increased to " + ModuleContext.formatVersion(Constants.getLowestSchemaVersion()) + ": " + modulesTooLow);
@@ -8365,17 +8366,15 @@ public class AdminController extends SpringActionController
         @Test
         public void modulesWithSchemaVersionButNoScripts()
         {
-            // Flag all managed modules that have a schema version but don't have scripts. Their schema version should be null.
+            // Flag all modules that have a schema version but don't have scripts. Their schema version should be null.
             List<String> moduleNames = ModuleLoader.getInstance().getModules().stream()
-                .filter(m->m.getSchemaVersion() != null)
-                .filter(m->m.getSchemaVersion() != 20.3) // These will become null soon enough
-                .filter(m->!((DefaultModule)m).hasScripts())
-                .filter(m->!Set.of("rstudio", "Recipe").contains(m.getName()))  // Filter out oddball modules
-                .map(m->m.getName() + ": " + m.getSchemaVersion())
-                .collect(Collectors.toList());
+                .filter(m -> m.getSchemaVersion() != null)
+                .filter(m -> m instanceof DefaultModule dm && !dm.hasScripts())
+                .map(m -> m.getName() + ": " + m.getSchemaVersion())
+                .toList();
 
             if (!moduleNames.isEmpty())
-                fail("The following module" + (1 == moduleNames.size() ? "" : "s") + " should have a null schema version: " + moduleNames.toString());
+                fail("The following module" + (1 == moduleNames.size() ? "" : "s") + " should have a null schema version: " + moduleNames);
         }
     }
 
