@@ -37,11 +37,9 @@ import org.labkey.study.xml.StudyDocument;
 import org.springframework.validation.BindException;
 import org.springframework.validation.ObjectError;
 
-import java.net.URI;
 import java.nio.file.Path;
 import java.util.Collections;
 import java.util.List;
-import java.util.stream.Collectors;
 
 /*
 * User: adam
@@ -80,8 +78,8 @@ public class StudyImportInitialTask extends PipelineJob.Task<StudyImportInitialT
     {
         // Construct all the SimpleStudyImporters that are designated as "Early"
         List<SimpleStudyImporter> simpleStudyImporters = StudySerializationRegistryImpl.get().getSimpleStudyImporters().stream()
-            .filter(ssi->ssi.getTiming() == SimpleStudyImporter.Timing.Early)
-            .collect(Collectors.toList());
+            .filter(ssi -> ssi.getTiming() == SimpleStudyImporter.Timing.Early)
+            .toList();
 
         try
         {
@@ -190,8 +188,6 @@ public class StudyImportInitialTask extends PipelineJob.Task<StudyImportInitialT
 
         // study.objective, study.personnel, and study.studyproperties tables
         new StudyPropertiesImporter().process(ctx, ctx.getRoot(), errors);
-
-        new MissingValueImporterFactory().create().process(job, ctx, ctx.getRoot());
 
         // check for legacy QC states file in study
         processImporter(ctx, job, errors, new StudyQcStatesImporter());
